--- a/_posts/2019-10-01-inktober.markdown
+++ b/_posts/2019-10-01-inktober.markdown
@@ -22,4 +22,17 @@ I picked Torosaurus to be my “ring” because the holes in its frill are so be
 
 [Photo reference](https://www.flickr.com/photos/itinerant_wanderer/7611487958)
 
+### Day 2: Mindless
+
+![inktober-2](/assets/inktober-2.jpg)
+
+Day 2: Mindless - Ctenochasma.  Drawn in about 4 hours.  All that black--never again!
+
+Ctenochasma (meaning “comb jaw”) was a Late Jurassic European cat-sized pterosaur with hundreds of skinny, comb-like teeth that it used to strain water for tiny shellfish like a modern spoonbill.  Too bad it’s Inktober, or I would’ve colored them flamboyant pink.  Here, one Ctenochasma is fishing, one is just chilling, and one is coming in for a landing.  Why are they all facing left?  Maybe it’s windy and they don’t want to get their **pycnofibres** ruffled.  (The real reason is that I’m much more comfortable drawing animals facing left than right for some reason.)
+
+I picked Ctenochasma to be my “mindless” because its inefficient feeding habits probably required it to stand with its face in the water for hours at a time (modern spoonbills do this).  I was debating between this and an ornithopod grazer, but I think I have enough opportunities to do ornithopods in other prompts later in the month.
+
+[Skeletal reference](https://www.deviantart.com/sassypaleonerd/art/Ctenochasma-Skeletal-804255465)
+[Integument reference](https://www.deviantart.com/lucas-attwell/art/Ctenochasma-773415650)
+
 [Inktober Prompts](https://twitter.com/inktober/status/1168394488181485568)
