inktober days 3 and 4

--- a/_posts/2019-10-01-inktober.markdown
+++ b/_posts/2019-10-01-inktober.markdown
@@ -28,11 +28,42 @@ I picked Torosaurus to be my “ring” because the holes in its frill are so be
 
 Day 2: Mindless - Ctenochasma.  Drawn in about 4 hours.  All that black--never again!
 
-Ctenochasma (meaning “comb jaw”) was a Late Jurassic European cat-sized pterosaur with hundreds of skinny, comb-like teeth that it used to strain water for tiny shellfish like a modern spoonbill.  Too bad it’s Inktober, or I would’ve colored them flamboyant pink.  Here, one Ctenochasma is fishing, one is just chilling, and one is coming in for a landing.  Why are they all facing left?  Maybe it’s windy and they don’t want to get their **pycnofibres** ruffled.  (The real reason is that I’m much more comfortable drawing animals facing left than right for some reason.)
+Ctenochasma (meaning “comb jaw”) was a Late Jurassic European cat-sized pterosaur with hundreds of skinny, comb-like teeth that it used to strain water for tiny shellfish like a modern spoonbill.  Too bad it’s Inktober, or I would’ve colored them flamboyant pink.  Here, one Ctenochasma is fishing, one is just chilling, and one is coming in for a landing.  Why are they all facing left?  Maybe it’s windy and they don’t want to get their **pycnofibres** ruffled.  (The real reason is that being [right-handed](https://philarchive.org/archive/TOSWAFv1), I’m much more comfortable drawing animals facing left than right.)
 
 I picked Ctenochasma to be my “mindless” because its inefficient feeding habits probably required it to stand with its face in the water for hours at a time (modern spoonbills do this).  I was debating between this and an ornithopod grazer, but I think I have enough opportunities to do ornithopods in other prompts later in the month.
 
 [Skeletal reference](https://www.deviantart.com/sassypaleonerd/art/Ctenochasma-Skeletal-804255465)
 [Integument reference](https://www.deviantart.com/lucas-attwell/art/Ctenochasma-773415650)
+
+### Day 3: Bait
+
+![inktober-3](/assets/inktober-3.jpg)
+
+Day 3: Bait - Tanystropheus.  Drawn in about an hour.  Is using sepia pens cheating?
+
+Tanystropheus (say “TAN-ee-STROW-fee-us”) was a Middle Triassic archosauromorph reptile known as the “living fishing rod”.  It was less than 3 feet tall, but 20 feet long, 10 feet of which was neck!  The neck was really stiff, made up of only a few super-elongated vertebrae, allowing Tanystropheus to lean its neck out over the water for long periods while it waited for fish and squid to appear--sort of like a heron, but without actually standing in the water.  Tanystropheus is well-known from many fossils, including a lot of complete skeletons of juveniles, which show that the juveniles were proportionally just mini-adults.  That means their eggs would’ve had to be super long and thin, to fit that stiff neck!
+
+I picked Tanystropheus to be my “bait” because of its claim to fame as the “living fishing rod.”  Even though drawing it only took an hour, I spent another hour researching, because I’m not super familiar with weird Triassic reptiles.  I wanted to get the proportions, posture, and pose right without just copying someone else’s art.  Stylistically, I was going for a sort of ukiyo-e feel, not sure if I succeeded.
+
+[Stylistic Inspiration](https://soranews24.com/2014/05/29/macabre-japanese-ukiyo-e-reveal-gothic-side-to-art-of-the-floating-world%E3%80%90pics%E3%80%91/)
+[Further reading 1](http://markwitton-com.blogspot.com/2015/11/the-lifestyle-of-tanystropheus-part-1.html)
+[Further reading 2](http://markwitton-com.blogspot.com/2015/12/the-lifestyle-of-tanystropheus-part-2.html)
+
+### Day 4: Freeze
+
+![inktober-4](/assets/inktober-4.jpg)
+
+Day 4: Freeze - Yutyrannus.  Drawn in about 2 hours.
+
+Yutyrannus (meaning “feather tyrant”) was an Early Cretaceous basal tyrannosauroid from Liaoning (northern China).  It’s by far the largest dinosaur we’ve found with preserved feathers, at around 3,000 pounds, and upon its discovery, paleoartists got super excited at the direct evidence that giant carnivorous dinos could be feathered, and started doing things like this:
+
+![fatbird-trex](/assets/fatbird-trex.jpg)
+
+However, Yutyrannus lived in quite different conditions than Tyrannosaurus--the former lived in a temperate climate that would’ve seen snow in the winter, while the latter lived in a subtropical forested floodplain.  Plus, Tyrannosaurus is about 13 times heavier, and due to the [square-cube law](https://en.wikipedia.org/wiki/Square%E2%80%93cube_law), would’ve had a much harder time dissipating heat.  In addition to all this, by now many tiny, high-res skin impressions from The King have been found that indicate complete scaliness.
+
+I picked Yutyrannus to be my “freeze” because of the seasonal changes it would’ve experienced in its environment.  Here, Yutyrannus takes a drink at a frozen pond in early winter, reminiscent of that stereotypical wolf picture.  This piece ended up being quite the experiment in textures.  Plants are hard.
+
+[Fatbird T-Rex](https://imgur.com/gallery/rmad4)
+[Pose Reference](https://www.deviantart.com/raphtor/art/Yutyrannus-732236601)
 
 [Inktober Prompts](https://twitter.com/inktober/status/1168394488181485568)
