inktober day 5 and 6

--- a/_posts/2019-10-01-inktober.markdown
+++ b/_posts/2019-10-01-inktober.markdown
@@ -66,4 +66,26 @@ I picked Yutyrannus to be my “freeze” because of the seasonal changes it wou
 [Fatbird T-Rex](https://imgur.com/gallery/rmad4)
 [Pose Reference](https://www.deviantart.com/raphtor/art/Yutyrannus-732236601)
 
+### Day 5: Build
+
+![inktober-5](/assets/inktober-5.jpg)
+
+Day 5: Build - Protoceratops.  Drawn in about an hour.
+
+Protoceratops was a small ceratopsian from Late Cretaceous Mongolia.  It lived in the desert alongside Velociraptor, and was probably **cathemeral**, meaning that rather than being nocturnal or diurnal, it was active at sporadic times during the day and night.
+
+I chose Protoceratops to be my “build” because of its fossilized record of extensive nesting behavior.  A Protoceratops nest and a Psittacosaurus nest (another small basal ceratopsian) have been found that each contained lots of yearlings, which means that the young remained in the nest for quite awhile after hatching.  In the case of Psittacosaurus, the nest also contained a subadult that appeared to be babysitting.  All this makes me think that Protoceratops probably cared a lot about how its nest was constructed, inspiring this piece.
+
+An interesting thing to note is the huge number of dinosaurs in these litters--15 for Protoceratops and 24 for Psittacosaurus.  Most animals that care for their offspring only have a few, because of the large amount of resources each one requires.  This is known as **K-strategy** (the K stands for Karrying Kapacity...in German).  On the other hand, animals who have a lot of offspring and don’t care for any of them, like a seahorse, are known as **r-strategists** (the r stands for rate.  Both these terms come from the math behind population dynamics).  These basal ceratopsians show a confusing mix of both strategies--a rather large number of offspring (though 24 babies is still nothing compared to the thousands put out by many sea creatures) with extensive parental and sibling care.
+
+### Day 6: Husky
+
+![inktober-6](/assets/inktober-6.jpg)
+
+Day 6: Husky - Olorotitan.  Drawn in about 4 hours.  All those ovals...
+
+Olorotitan (meaning “swan titan”) was a lambeosaurine “duck-billed” dinosaur from Late Cretaceous Russia.  Lambeosaurinae are the crested subset of hadrosaurs (the non-crested group is called Saurolophinae), which were medium-sized grazers with advanced chewing abilities--essentially, they filled the same niche as cows do today.  Typically, these guys are pictured as pretty lithe, but in the book All Yesterdays, paleoartist John Conway suggested they may have been a bit more...husky.  This illustration is heavily inspired by his [depiction of Parasaurolophus](https://johnconway.co/ay_parasaurolophus) from that book.
+
+What’s with the huge, dragonlike scales? A [fossil](https://www.nationalgeographic.com/science/phenomena/2013/12/12/surpise-well-studied-dinosaur-actually-had-a-cocks-comb/) of an Edmontosaurus’s neck and back of head (a related but soft-crested hadrosaur) was found with these huge oval scales preserved. I've seen reconstructions that incorporate the big scales on the neck but show the rest of the body with normal-sized scales, but I thought, why would they stop at the neck?  And so I got myself into a multi-hour circle-drawing predicament.  Here, a bull Olorotitan vegges out.  Look how into himself he is.
+
 [Inktober Prompts](https://twitter.com/inktober/status/1168394488181485568)
