inktober 9 and 10 and timurlengia

--- a/_posts/2019-10-01-inktober.markdown
+++ b/_posts/2019-10-01-inktober.markdown
@@ -118,4 +118,28 @@ I picked Scleromochlus to be my “frail” because its long limbs just look lik
 [Further reading](http://markwitton-com.blogspot.com/2014/08/scleromochlus-taylori-more-than-just.html)
 [Hop cycle reference](https://www.youtube.com/watch?v=YXx_br6LqF8)
 
+### Day 9: Swing
+
+![inktober-9](/assets/inktober-9.jpg)
+
+Day 8: Swing - Megalancosaurus.  Drawn in about an hour.
+
+Megalancosaurus was a Drepanosaur from Late Triassic Italy, one of a family of oddballs highly convergent with chameleons.  They had a clawed tail (the claw was made up of fused vertebrae), two thumbs on their front feet, one or zero thumbs on their back feet (depending on if male or female--how weird is that?) and a pointy head, and were probably insectivorous and arboreal.  Some of them, like Hypuronector, may have even glided between trees.  Here, a Megalancosaurus swings from its tail to catch an insect.  Its humped shoulders provide an attachment site for its strong neck muscles, allowing it to quickly extend its head forward and nab that dragonfly!
+
+[Megalancosaurus Skeletal](https://www.researchgate.net/figure/Skeletal-reconstruction-and-body-outline-of-Megalancosaurus-Note-Scale-bar-equals-10_fig2_283655245)
+[Reference](https://www.deviantart.com/eurwentala/art/Tree-Creature-584393201)
+
+### Day 10: Pattern
+
+![inktober-10](/assets/inktober-10.jpg)
+
+Day 10: Pattern - Ornithomimus (chicks).  Drawn in about 40 minutes.
+
+Ornithomimus (meaning “bird mimic”) was an ornithomimid dinosaur from Late Cretaceous North America.  They were extremely convergent with ratites (the family of flightless birds that includes ostriches), but given Ornithomimids did it first, it might be more accurate to say that ratites are ornithomimid mimics.  Ornithomimus had a long neck, long legs, and a little head with a toothless beak.  A specimen found in 2015 with feathers and skin preserved indicates that their integument was _also_ very convergent with ratites, not just their skeletal structure.  We know that Ornithomimus had feathers basically everywhere except its legs, which it probably used for thermoregulation (maybe it even peed on its legs like a vulture to keep cool?  Ideas for NSFW paleoart?), and that adults had **pennaceous** feathers on their arms while juveniles did not, indicating that these feathers were for sexual display.
+
+I picked Ornithomimus to be my “pattern” because baby ostriches have adorable stripes, so it’s not a bad guess to say baby Ornithomimus did too.  Many animals start out life stripy or spotty and then lose the patterning later on when they develop other defenses besides camouflage.
+
+[Photo Reference](https://www.noahsarkzoofarm.co.uk/blog/baby-animal-update)
+[Ornithomimus Integument](http://www.sci-news.com/paleontology/science-ornithomimus-dinosaur-ostrich-like-plumage-03388.html)
+
 [Inktober Prompts](https://twitter.com/inktober/status/1168394488181485568)
