--- a/_posts/2019-09-24-anzu.markdown
+++ b/_posts/2019-09-24-anzu.markdown
@@ -5,7 +5,9 @@ date:   2019-09-24 01:40:08 -0700
 categories: profile
 ---
 Family tree: Coelurosauria > Maniraptora > Pennaraptora > Oviraptorosauria > Caenagnathidae
+
 Hometown: Hell Creek (Montana), 66 mya (Latest Cretaceous)
+
 Discovered 1998, described 2014
 
 ![anzu-1](/assets/anzu-1.jpg)
@@ -38,7 +40,7 @@ Above: A bald eagle skeleton with sclerotic ring visible.
 Above: A gecko skeleton with sclerotic rings visible.
 
 #### Note 2: How many times have beaks evolved independently?
-A lot: Birds, oviraptorosaurs like Anzu, cephalopods (octopuses and squids), turtles, pterosaurs, monotremes (platypuses and echidnas), parrotfish, certain ornithischians, dicynodonts (a type of stem-mammal), certain pseudosuchians like Lotosaurus and Effigia (crocodile relatives), rhynchosaurs (early reptiles), therizinosaurs, ornithomimids, and even some ceratosaurs like Limusaurus all had **keratinous** beaks.  And that’s not even a comprehensive list.  Beaks are both very useful and very easy to make, evolutionarily--they are a very **homoplastic** trait.  This is another example of [convergent evolution](blog/post/2019/09/06/convergent-evolution.html).
+A lot: Birds, oviraptorosaurs like Anzu, cephalopods (octopuses and squids), turtles, pterosaurs, monotremes (platypuses and echidnas), parrotfish, certain ornithischians, dicynodonts (a type of stem-mammal), certain pseudosuchians like Lotosaurus and Effigia (crocodile relatives), rhynchosaurs (early reptiles), therizinosaurs, ornithomimids, and even some ceratosaurs like Limusaurus all had **keratinous** beaks.  And that’s not even a comprehensive list.  Beaks are both very useful and very easy to make, evolutionarily--they are a very **homoplastic** trait.  This is another example of [convergent evolution](http://obscuredinosaurfacts.com/blog/post/2019/09/06/convergent-evolution.html).
 
 ![beaks](/assets/beaks.jpg)
 
