--- a/_posts/2019-10-01-inktober.markdown
+++ b/_posts/2019-10-01-inktober.markdown
@@ -142,4 +142,31 @@ I picked Ornithomimus to be my “pattern” because baby ostriches have adorabl
 [Photo Reference](https://www.noahsarkzoofarm.co.uk/blog/baby-animal-update)
 [Ornithomimus Integument](http://www.sci-news.com/paleontology/science-ornithomimus-dinosaur-ostrich-like-plumage-03388.html)
 
+### Day 11: Snow
+
+![inktober-11](/assets/inktober-11.jpg)
+
+Day 11: Snow - Leaellynasaura.  Drawn in about an hour.
+
+Leaellynasaura was a small ornithischian from Early Cretaceous Australia, at a time when Australia was joined to Antarctica and South America and all three had areas within the Antarctic Circle.  The climate was much milder than today’s Antarctica, but the animals that lived there would have still had to deal with months-long darkness and frigid conditions.
+
+Leaellynasaura is often drawn with a thin layer of protofeathers, which it is likely it would have needed to survive the harsh winters.  However, here I dressed up my Leaellynasaura like a snowy owl, with a thick layer of “type 3” feathers that go all the way down to the feet to create a wide snowshoe for walking on powder without sinking.  The arms are totally hidden in fluff, and only the face is bare.  This depiction has at least a little basis in fact, since we now know that ornithischians did sometimes have “type 3” feathers, a la Kulindadromeus.
+
+Leaellynasaura had one of the longest tail-to-body ratios of any animal.  What was it used for?  Some suggest they were held upright like a signpost so that they could find each other and stay together.  Others suggest it was a sort of false head, used to try to get a predator to focus on the wrong end.
+
+References [1](https://www.deviantart.com/eurwentala/art/Blue-Moment-474422923) [2](https://johnconway.co/ay_leaellynasaura)
+
+### Day 12: Dragon
+
+![inktober-12](/assets/inktober-12.jpg)
+
+Day 12: Dragon - Beibeilong.  Drawn in about 3 hours.
+
+Beibeilong (meaning “baby dragon”) was a giant oviraptorosaur from early Late Cretaceous China.  It is known from a single fossilized embryo inside a two-foot-long egg named “Baby Louie,” which was discovered back in 1993 but only described as a new genus in 2017.  Part of the holdup was that the fossil had been expatriated to the United States.  The other part was that Beibeilong’s closest relative, Gigantoraptor, wasn’t discovered until 2007.  Before that, scientists didn’t think oviraptors could get big enough to lay such a huge egg.
+
+I based my Beibeilong’s plumage off that of a rooster, since oviraptorosaurs look a lot like oversized fowl.  I tried to evoke an ukiyo-e style dragon kind of feel using its combs and wattles.
+
+[Stylistic Reference](https://redsparkleart.com/ito-jakuchu-ukiyo-e-master-bird-and-flower-lover/)
+[Gigantoraptor Reference](https://www.deviantart.com/kronosaurus82/art/Gigantoraptor-176504978)
+
 [Inktober Prompts](https://twitter.com/inktober/status/1168394488181485568)
