--- a/_posts/2019-10-01-inktober.markdown
+++ b/_posts/2019-10-01-inktober.markdown
@@ -169,4 +169,44 @@ I based my Beibeilong’s plumage off that of a rooster, since oviraptorosaurs l
 [Stylistic Reference](https://redsparkleart.com/ito-jakuchu-ukiyo-e-master-bird-and-flower-lover/)
 [Gigantoraptor Reference](https://www.deviantart.com/kronosaurus82/art/Gigantoraptor-176504978)
 
+### Day 13: Ash
+
+![inktober-13](/assets/inktober-13.jpg)
+
+Day 13: Ash - The Very Bad Day.  The final day of the Cretaceous period. Drawn in about 2 hours. Featured animals: Triceratops and Anzu.
+
+1. For the past few days, the dinosaurs would’ve seen the asteroid rising and setting like the sun, getting steadily bigger in the sky.
+2. A blinding flash
+3. Earthquakes! Even the biggest dinosaurs are thrown into the air. Many of them die from this.
+4. Tektites (pea-sized chunks of hot glass) rain down, burning and choking animals directly but also heating the air and causing numerous forest fires.
+5. Tornado-force winds sweep the area, expanding the fires, knocking down trees, and causing floods.
+6. Ash. Volcanic ash and soot from the forest fires blocks the sky for a long time, causing plants to die from acid rain and lack of sunlight. This makes the whole food web collapse.
+
+This comic is largely based on Steve Brusatte’s description from his book _The Rise and Fall of the Dinosaurs: A New History of a Lost World_, which is an excellent book I highly recommend, to both beginners and seasoned paleo fans.
+
+### Day 14: Overgrown
+
+![inktober-14](/assets/inktober-14.jpg)
+
+Day 14: Overgrown - Ambopteryx. Drawn in about 40 minutes.
+
+Ambopteryx (meaning “both wing”) was a scansoriopterygid from Late Jurassic China. It was one of a group of very strange “bat-winged” dinosaurs that flew using a skin membrane stretched between their body and elongated third finger. They also had feathers (hence the name). This is one of at least four times that different branches of theropods developed flight independently, and definitely the strangest.
+ 
+Ambopteryx was just described in May of this year, and is the second scansoriopterygid found preserved with membranes intact (the first was Yi, 2015). The Ambopteryx holotype also preserves the long individual tail feathers. Before Yi, we had no idea how these bat-winged dinos lived—many thought they poked their elongated finger into trees like an aye aye.
+ 
+I picked Ambopteryx to be my “overgrown” because it probably lived in the deep forest and hid amongst the vegetation...a bit of a stretch I guess.  I don’t know much about plants so please forgive me if the plants shown here are totally anachronistic.
+ 
+### Day 15: Legend
+
+![inktober-15](/assets/inktober-15.jpg)
+
+Day 15: Legend - Tyrannosaurus rex through the years.
+ 
+Here are four depictions of Tyrannosaurus showing how our understanding of this legendary dinosaur has changed over the years.
+
+1. In the early 1900s, dinosaurs and paleontology were very much in vogue.  Charles R. Knight was one of the most influential paleoartists of the time, capturing the public imagination with dynamic scenes featuring extinct creatures.  Paleontology and paleoart were very young back then, and though we can now spot a lot of inaccuracies, the scientists and artists of the time did a really good job with what they knew then.
+2. In the Dinosaur Renaissance beginning in the late 1960s with the discovery of Deinonychus and culminating in the release of the movie _Jurassic Park_ in 1993, dinosaurs re-emerged into the public view with new vitality.  Now their relationship to birds was well accepted, and they were understood to be warm-blooded, active, successful animals rather than sluggish, oversized swamp lizards that deserved to go extinct.  Theropods’ posture was corrected--they stopped being shown dragging their tails and walking upright like kangaroos, and instead were depicted balancing horizontally with stiffened tails.
+3. In 2012, the discovery of Yutyrannus, a completely feathered yeti-esque tyrannosaur, caused paleoartists to start feathering basically all coelurosaurs, including The King, due to the principle of phylogenetic bracketing.  The hyper-realistic dinosaur simulator game _Saurian_ was no exception, creating a beautiful fluffy rex (though they’ve since updated their depiction again to reflect more current findings).  Some other important corrections between this depiction and the Dinosaur Renaissance one are the presence of lips that cover the teeth while the mouth is closed and hands that are oriented as if about to clap rather than pronated like a cat’s paws.
+4. Since 2012, more discoveries of Tyrannosaurus skin impressions show that it was probably entirely secondarily scaly, having lost its feathers as it got super-sized in order to better cool off.  Read more about this [here](http://markwitton-com.blogspot.com/2017/06/revenge-of-scaly-tyrannosaurus.html).
+
 [Inktober Prompts](https://twitter.com/inktober/status/1168394488181485568)
